--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "antd": "^5.8.6",
     "bootstrap-icons": "^1.11.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
